--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: "sudo -i && cd /var/www/websites/makogai.xyz && ./.scripts/deploy.sh"
+          script: "cd /var/www/websites/makogai.xyz && sudo ./.scripts/deploy.sh"
