Fix permission issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: work around permission issue
+        run: git config --global --add safe.directory /var/www/websites/makogai.xyz
       - uses: actions/checkout@v2
       - name: Deploy to server
         uses: appleboy/ssh-action@master
