--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: work around permission issue
-        run: git config --global --add safe.directory /var/www/websites/makogai.xyz
+        run: git config --global --add safe.directory /var/www/websites/of.makogai.xyz
       - uses: actions/checkout@v2
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -26,4 +26,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd /var/www/websites/makogai.xyz && ./.scripts/deploy.sh"
+          script: "cd /var/www/websites/of.makogai.xyz && ./.scripts/deploy.sh"
