--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/jetstream": "^2.7",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "multicaret/laravel-acquaintances": "^3.5",
         "munafio/chatify": "^1.5",
         "spatie/laravel-medialibrary": "^10.0.0",
         "tightenco/ziggy": "^1.0"
