--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Deploy
 
-# Trigger the workflow on push and 
+# Trigger the workflow on push and
 # pull request events on the main branch
 on:
   push:
@@ -9,15 +9,15 @@ on:
   pull_request:
     branches:
       - main
-      
-# Authenticate to the the server via ssh 
-# and run our deployment script 
+
+# Authenticate to the the server via ssh
+# and run our deployment script
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: work around permission issue
-        run: git config --global --add safe.directory /var/www/websites/of.makogai.xyz
+        run: git config --global --add safe.directory /var/www/websites/freends.makogai.xyz
       - uses: actions/checkout@v2
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -26,4 +26,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd /var/www/websites/of.makogai.xyz && ./.scripts/deploy.sh"
+          script: "cd /var/www/websites/freends.makogai.xyz && ./.scripts/deploy.sh"
